--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,6 +9,7 @@
     background: var(--Primary-400);
     color: var(--White-100);
 
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
