--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,13 @@
   --Primary-50: #EBE9FE;
 
   --Grey-900: #121829;
+  --Grey-700: #323B54;
+  --Grey-600: #475069;
   --Grey-300: #8E95A9;
+  --Grey-200: #A8AEBF;
   --Grey-50: #EBEEF5;
+
+  --Black-10: rgba(0, 0, 0, 0.10);
 
 
 
@@ -28,14 +33,32 @@
   background-color: var(--Grey-900);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-#root {
-  width: 100%;
-  height: 100%;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
